--- a/style.css
+++ b/style.css
@@ -2,11 +2,19 @@
     margin: 0;
     padding:0;
 }
+#MainHeading{
+    margin: 2rem;
+    color:#414535;
+    font-size: 3rem;
+    
+
+
+}
 main{
 text-align: center;
 }
 body{
-    background-color: #3B6665;
+    background-color: #F2E3BC;
 }
 .container{
     height:70vh;
@@ -34,7 +42,7 @@ justify-content: center;
     border:none;
     color:#59114D;
     font-size: 10vmin;
-    background-color: #ECE5F0;
+    background-color: #96BBBB;
 }
 #reset{
     padding:0.5rem;
